# cloudstb

./: README.md  envsetup
client/: Makefile.bak
client/clang/src/: Makefile
client/golang/: client.go  clientstb.json
client/golang/platform/: platform.go
client/inc/: common.h
client/src/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
